# firebot-arm

./: LICENSE  README.md  run_docker.sh
docker/: Dockerfile
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/firebot_arm_pkg/lib/firebot_arm_pkg/: direct_kinematics  direct_kinematics.py  inverse_kinematics  inverse_kinematics.py  kinematics
install/firebot_arm_pkg/share/firebot_arm_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/firebot_arm_pkg/share/firebot_arm_pkg/config/: controllers.yaml  display.rviz
install/firebot_arm_pkg/share/firebot_arm_pkg/launch/: controller.launch.py  display.launch.py  gazebo.launch.py
install/firebot_arm_pkg/share/firebot_arm_pkg/meshes/: base_link.stl  linkhorizontal1_1.stl  linkvertical1_1.stl  linkvertical2_1.stl
install/firebot_arm_pkg/share/firebot_arm_pkg/urdf/: materials.xacro  montagem.control.xacro  montagem.gazebo  montagem.trans  montagem.xacro
log/: latest_build
src/firebot_arm_pkg/: package.xml  setup.cfg  setup.py
src/firebot_arm_pkg/config/: controllers.yaml
src/firebot_arm_pkg/launch/: controller.launch.py  gazebo.launch.py
src/firebot_arm_pkg/scripts/: kinematics.py
src/firebot_arm_pkg/urdf/: montagem.control.xacro  montagem.gazebo  montagem.trans  montagem.xacro
