<package format="3">
  <!-- Nome do pacote -->
  <name>firebot_arm_pkg</name>

  <!-- Versão do pacote -->
  <version>0.0.1</version>

  <!-- Descrição do pacote -->
  <description>Pacote de simulação do manipulador Firebot Arm</description>

  <!-- Informações do mantenedor -->
  <maintainer email="carvalho.matheush@gmail.com">MHC</maintainer>

  <!-- Licença do pacote -->
  <license>MIT</license>

  <!-- Dependências necessárias para compilação -->
  <buildtool_depend>ament_cmake</buildtool_depend> <!-- Necessário para pacotes baseados em CMake -->
  <buildtool_depend>ament_python</buildtool_depend> <!-- Necessário para pacotes baseados em Python -->

  <!-- Dependências necessárias para execução do pacote -->
  <exec_depend>rclpy</exec_depend> <!-- Biblioteca Python para ROS 2 -->
  <exec_depend>ros2_control</exec_depend> <!-- Framework de controle no ROS 2 -->
  <exec_depend>ros2_controllers</exec_depend> <!-- Controladores padrão do ROS 2 -->
  <exec_depend>joint_state_publisher_gui</exec_depend> <!-- Interface para publicar estados das juntas -->
  <exec_depend>robot_state_publisher</exec_depend> <!-- Publicador do modelo do robô -->
  <exec_depend>rviz2</exec_depend> <!-- Ferramenta de visualização ROS 2 -->
  <exec_depend>gazebo_ros</exec_depend> <!-- Integração com o simulador Gazebo -->
  <exec_depend>xacro</exec_depend> <!-- Ferramenta para criação de modelos URDF dinâmicos -->

  <!-- Dependências necessárias para teste do pacote -->
  <test_depend>ament_copyright</test_depend> <!-- Teste de licença e direitos autorais -->
  <test_depend>ament_flake8</test_depend> <!-- Linter para verificar estilo do código Python -->
  <test_depend>ament_pep257</test_depend> <!-- Verifica conformidade com documentação PEP 257 -->
  <test_depend>python3-pytest</test_depend> <!-- Framework de testes para Python -->

  <!-- Exportação de informações específicas do pacote -->
  <export>
    <build_type>ament_python</build_type> <!-- Define o tipo de build como Python -->
  </export>
</package>
